Fix z-index of playlist form

--- a/app/assets/stylesheets/modal/modal.scss
+++ b/app/assets/stylesheets/modal/modal.scss
@@ -5,7 +5,7 @@
   right: 0;
   left: 0;
   background: rgba(0, 0, 0,0.9);
-  z-index: 10;
+  z-index: 101;
 
 }
 
